# browserstate

./: .gitignore  .npmignore  CONTRIBUTING.md  README.md  __init__.py  eslint.config.mjs  issue.md  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  tsconfig.json
.github/workflows/: canary-release.yml  cross-platform-python.yml  cross-platform-tests.yml  cross-platform-typescript.yml  interop-tests.yml  python-dependency-isolation.yml  python-publish.yml  python-tests.yml  typescript-dependency-isolation.yml  typescript-npm-manual-release.yml  typescript-npm-release.yml  typescript-promote-canary.yml
design-docs/: redis-cache.md
docs/: concept.mdx  docs.json  getting-started.mdx  introduction.mdx  redis-cache.md  sync-design.md  use-cases.mdx
python/: README.md  pyproject.toml  setup.py
python/browserstate/: __init__.py  browser_state.py
python/browserstate/storage/: __init__.py  gcs_storage.py  local_storage.py  redis_storage.py  s3_storage.py  storage_provider.py
python/browserstate/utils/: __init__.py  dynamic_import.py
python/examples/: linkedindemo.py  playwright_example.py  selenium_example.py
python/tests/: conftest.py  test_browser_state.py  test_custom_storage.py  test_gcs_storage.py  test_lazy_imports.py  test_local_storage.py  test_redis_storage.py  test_s3_storage.py
src/: BrowserState.ts
src/storage/: GCSStorage.ts  S3Storage.ts
tests/: __init__.py
tests/integration/: __init__.py  compatible_redis_storage.py  test_compatible_redis_storage.py  test_local_storage_interop.py  test_py_ts_interop.py  test_s3_storage_interop.py  ts_local_helper.js  ts_redis_helper.js  ts_s3_helper.js  ts_storage_helper.py
tests/interop/: README.md  run_all.sh  setup.sh  (+1 more)
typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
(+85 files in other folders)
