[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browserstate"
version = "0.0.1"
authors = [
  { name="BrowserState Team", email="info@browserstate.dev" },
]
description = "Manage browser profiles across cloud storage providers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Runtime dependencies
]
license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies]
# Development dependencies that are not needed for runtime
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "moto>=5.0.0",  # AWS mocking for tests
]

# Optional storage backend dependencies
redis = [
    "redis>=4.5.0",
]
s3 = [
    "boto3>=1.26.0",
]
gcs = [
    "google-cloud-storage>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/bigboateng/browserstate"
Issues = "https://github.com/bigboateng/browserstate/issues"